unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch_Log__c/pse__Create_Billing_Documents_Batch_Log__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__CreateBillingDocumentsBatchLogHelp</customHelpPage>
    <description>Stores the results of each Create Billing Documents Batch iteration.</description>
    <label>Create Billing Documents Batch Log</label>
    <nameField>
        <displayFormat>CBDBL-{000000}</displayFormat>
        <label>Create Billing Documents Batch Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Create Billing Documents Batch Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>