unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch_Log__c/fields/pse__Create_Billing_Documents_Batch__c.field-meta.xml
<CustomField>
    <fullName>pse__Create_Billing_Documents_Batch__c</fullName>
    <description>Master-Detail link to the related Create Billing Documents Batch record.</description>
    <inlineHelpText>Master-Detail link to the related Create Billing Documents Batch record.</inlineHelpText>
    <label>Create Billing Documents Batch</label>
    <referenceTo>pse__Create_Billing_Documents_Batch__c</referenceTo>
    <relationshipLabel>Create Billing Documents Batch Logs</relationshipLabel>
    <relationshipName>Create_Billing_Documents_Batch_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>