unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch_Log__c/fields/pse__Log_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Log_Type__c</fullName>
    <description>Indicates the type of log (Error, Information, Abort, External).</description>
    <inlineHelpText>Indicates the type of log (Error, Information, Abort, External).</inlineHelpText>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Abort</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>