unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch_Log__c/fields/pse__Message__c.field-meta.xml
<CustomField>
    <fullName>pse__Message__c</fullName>
    <description>The text of the message.</description>
    <inlineHelpText>The text of the message.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>